pci: Change device to function

It's functions that are placed into D3 for these value, not the device.

PR: 259703
Sponsored by:		Netflix