sys/dev/pci/pci.c
@@ -353,8 +353,8 @@ static int pci_do_power_nodriver = 0;
 SYSCTL_INT(_hw_pci, OID_AUTO, do_power_nodriver, CTLFLAG_RWTUN,
     &pci_do_power_nodriver, 0,
     "Place a function into D3 state when no driver attaches to it.  0 means"
-    " disable.  1 means conservatively place devices into D3 state.  2 means"
-    " aggressively place devices into D3 state.  3 means put absolutely"
+    " disable.  1 means conservatively place function into D3 state.  2 means"
+    " aggressively place function into D3 state.  3 means put absolutely"
     " everything in D3 state.");
 
 int pci_do_power_resume = 1;
